style.css - correction alignement filtre

--- a/style.css
+++ b/style.css
@@ -242,9 +242,10 @@ strong{
 
 #filtre{
     display: flex;
-    align-items: center;
+    align-items: baseline;
     width: 100%;
     margin-top: 20px;
+    border: solid 1px black;
 }
 
 
